--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-utils2",
-  "version": "3.1.0-alpha.0",
+  "version": "3.1.0-alpha.1",
   "description": "Utilities for ESLint plugins.",
   "engines": {
     "node": "^10.0.0 || ^12.0.0 || >= 14.0.0"
@@ -8,8 +8,10 @@
   "sideEffects": false,
   "main": "index",
   "module": "index.mjs",
+  "types": "types/index.d.ts",
   "files": [
-    "index.*"
+    "index.*",
+    "types/"
   ],
   "exports": {
     ".": {
