--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-utils2",
-  "version": "3.1.0-alpha.1",
+  "version": "3.1.0-rc.0",
   "description": "Utilities for ESLint plugins.",
   "engines": {
     "node": "^10.0.0 || ^12.0.0 || >= 14.0.0"
@@ -65,16 +65,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mysticatea/eslint-utils.git"
+    "url": "git+https://github.com/imhele/eslint-utils2.git"
   },
   "keywords": [
     "eslint"
   ],
-  "author": "Toru Nagashima",
+  "authors": [
+    "Toru Nagashima",
+    "何乐 <work@imhele.com> (https://github.com/imhele)"
+  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mysticatea/eslint-utils/issues"
+    "url": "https://github.com/imhele/eslint-utils2/issues"
   },
-  "homepage": "https://github.com/mysticatea/eslint-utils#readme",
-  "funding": "https://github.com/sponsors/mysticatea"
+  "homepage": "https://github.com/imhele/eslint-utils2#readme"
 }
